# EternalPatchManifestGo

./: .deepsource.toml  .travis.yml  CMakeLists.txt  README.md  crypto.c  crypto.h  go.mod  main.c  main.go
.github/workflows/: cmake.yml  release.yml  test.yml
